[gd_scene load_steps=6 format=3 uid="uid://r4ncqir4b5ji"]

[ext_resource type="Script" uid="uid://by2jd4eu5t7w0" path="res://Player/player.gd" id="1_1c8h4"]
[ext_resource type="PackedScene" uid="uid://0xj6hkwuxe05" path="res://Player/Player_Skin/player_animations.tscn" id="2_4ntmi"]
[ext_resource type="Script" uid="uid://cdvoulmb50i3n" path="res://Components/hitbox.gd" id="3_btcbx"]
[ext_resource type="Script" uid="uid://grpwcbu4xdin" path="res://Components/health.gd" id="4_gwnis"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_anwvx"]
radius = 0.2
height = 1.8

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("_skin")]
collision_mask = 5
script = ExtResource("1_1c8h4")
DEBUG = true
_skin = NodePath("player animations")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_anwvx")

[node name="player animations" parent="." instance=ExtResource("2_4ntmi")]

[node name="Hitbox" type="Node" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("3_btcbx")
health = NodePath("../Health")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_gwnis")
starting_health = 100.0

[node name="OilTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="CameraPivotPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.87689, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivotPoint"]
collision_mask = 2
spring_length = 6.0

[node name="Camera3D" type="Camera3D" parent="CameraPivotPoint/SpringArm3D"]

[node name="ShootingCooldownTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
